// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render correctly 1`] = `
.emotion-1 {
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 2px;
  display: inline-block;
  height: 16px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  vertical-align: middle;
  width: 16px;
}

.emotion-2 {
  color: #4d4d4d;
  font-size: 12px;
  margin-left: 0.5rem;
}

.emotion-3 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  opacity: 0;
  margin-right: -13px;
}

.emotion-0:hover + .emotion-1 {
  border-color: #666666;
}

.emotion-0:checked + .emotion-1 {
  background-color: #056DFF;
  border-color: #056DFF;
}

.emotion-0:checked + .emotion-1:after {
  content: "";
  border-right: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  position: absolute;
  width: 6px;
  height: 10px;
  top: 1px;
  left: 4px;
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-0:indeterminate + .emotion-1 {
  background-color: #056DFF;
  border-color: #056DFF;
}

.emotion-0:indeterminate + .emotion-1:after {
  content: "";
  border-bottom: 2px solid #ffffff;
  position: absolute;
  top: -1px;
  left: 3px;
  width: 8px;
  height: 10px;
  opacity: 1;
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-0:focus + .emotion-1 {
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:disabled + .emotion-1 {
  background-color: #f2f2f7;
  border-color: #e6e6e6;
}

.emotion-0:disabled + .emotion-1 + .emotion-2 {
  color: #b3b3b3;
}

<label
  class="emotion-3"
>
  <input
    class="emotion-0"
    type="checkbox"
  />
  <span
    class="emotion-1"
  />
  <span
    class="emotion-2"
  >
    check
  </span>
</label>
`;

exports[`Checkbox should render correctly when disabled 1`] = `
.emotion-1 {
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 2px;
  display: inline-block;
  height: 16px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  vertical-align: middle;
  width: 16px;
}

.emotion-2 {
  color: #4d4d4d;
  font-size: 12px;
  margin-left: 0.5rem;
}

.emotion-0 {
  opacity: 0;
  margin-right: -13px;
}

.emotion-0:hover + .emotion-1 {
  border-color: #666666;
}

.emotion-0:checked + .emotion-1 {
  background-color: #056DFF;
  border-color: #056DFF;
}

.emotion-0:checked + .emotion-1:after {
  content: "";
  border-right: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  position: absolute;
  width: 6px;
  height: 10px;
  top: 1px;
  left: 4px;
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-0:indeterminate + .emotion-1 {
  background-color: #056DFF;
  border-color: #056DFF;
}

.emotion-0:indeterminate + .emotion-1:after {
  content: "";
  border-bottom: 2px solid #ffffff;
  position: absolute;
  top: -1px;
  left: 3px;
  width: 8px;
  height: 10px;
  opacity: 1;
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-0:focus + .emotion-1 {
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:disabled + .emotion-1 {
  background-color: #f2f2f7;
  border-color: #e6e6e6;
}

.emotion-0:disabled + .emotion-1 + .emotion-2 {
  color: #b3b3b3;
}

.emotion-3 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

<label
  class="emotion-3"
>
  <input
    class="emotion-0"
    disabled=""
    type="checkbox"
  />
  <span
    class="emotion-1"
  />
  <span
    class="emotion-2"
  >
    check
  </span>
</label>
`;

exports[`Checkbox should render correctly when indeterminate 1`] = `
.emotion-1 {
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 2px;
  display: inline-block;
  height: 16px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  vertical-align: middle;
  width: 16px;
}

.emotion-2 {
  color: #4d4d4d;
  font-size: 12px;
  margin-left: 0.5rem;
}

.emotion-3 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  opacity: 0;
  margin-right: -13px;
}

.emotion-0:hover + .emotion-1 {
  border-color: #666666;
}

.emotion-0:checked + .emotion-1 {
  background-color: #056DFF;
  border-color: #056DFF;
}

.emotion-0:checked + .emotion-1:after {
  content: "";
  border-right: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  position: absolute;
  width: 6px;
  height: 10px;
  top: 1px;
  left: 4px;
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-0:indeterminate + .emotion-1 {
  background-color: #056DFF;
  border-color: #056DFF;
}

.emotion-0:indeterminate + .emotion-1:after {
  content: "";
  border-bottom: 2px solid #ffffff;
  position: absolute;
  top: -1px;
  left: 3px;
  width: 8px;
  height: 10px;
  opacity: 1;
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease;
}

.emotion-0:focus + .emotion-1 {
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:disabled + .emotion-1 {
  background-color: #f2f2f7;
  border-color: #e6e6e6;
}

.emotion-0:disabled + .emotion-1 + .emotion-2 {
  color: #b3b3b3;
}

<label
  class="emotion-3"
>
  <input
    class="emotion-0"
    type="checkbox"
  />
  <span
    class="emotion-1"
  />
  <span
    class="emotion-2"
  >
    check
  </span>
</label>
`;
